update tests with monticore test framework